project/scg-asgn/deployment/base/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scg-asgn-fe
spec:
  type: ClusterIP
  selector:
    app: scg-asgn-fe
  ports:
    - name: http
      port: 80
      targetPort: http
