project/scg-asgn/deployment/base/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scg-asgn
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: scg-asgn.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: scg-asgn-be-active
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: scg-asgn-fe
                port:
                  number: 80
